force-app/main/default/objects/SSIP_Schedule__c/fields/First_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Shipment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Shipment Date</label>
    <type>Date</type>
</CustomField>