force-app/main/default/objects/SSIP_Schedule__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <description>Will be defaulted from Parent SSIP Rule</description>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Term</valueSetName>
    </valueSet>
</CustomField>