force-app/main/default/objects/SSIP_Schedule__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product tied to the Rule</description>
    <formula>SSIP_Rule__r.Product_Name__c</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>