force-app/main/default/objects/SSIP_Schedule__c/fields/Rescheduled_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Shipment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rescheduled Shipment Date</label>
    <type>Date</type>
</CustomField>