force-app/main/default/objects/SSIP_Schedule__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>List of all Ship To addresses tied to the customer.</description>
    <label>Changed Shipping Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Address__c.Type__c</field>
            <operation>equals</operation>
            <value>Ship To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>SSIP Schedule</relationshipLabel>
    <relationshipName>SSIP_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>