force-app/main/default/objects/SSIP_Schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Open&apos;</defaultValue>
    <description>Will be defaulted to Open. Depending on the Order processing other values will be set.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In Error</fullName>
            </value>
            <value>
                <fullName>In Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>